--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "watch": "npm-run-all w:main",
     "build": "yarn run b:main",
-    "w:main": "watchify src/turnStyles.js -o dist/turnStyles.js",
+    "w:main": "watchify src/core/turnStyles.js -o dist/turnStyles.js",
     "w:sass": "",
-    "b:main": "browserify -p tinyify src/turnStyles.js -o dist/turnStyles.js",
+    "b:main": "browserify -p tinyify src/core/turnStyles.js -o dist/turnStyles.js",
     "b:sass": ""
   },
   "devDependencies": {
