--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "pixelcrisis <pxcrisis@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn b:index && yarn b:theme && yarn b:style",
+    "build": "concurrently \"yarn b:index\" \"yarn b:theme\" \"yarn b:style\"",
     "watch": "concurrently \"yarn w:index\" \"yarn w:theme\" \"yarn w:style\"",
     "w:index": "watchify src/core/turnStyles.js -o dist/turnStyles.js",
     "b:index": "browserify -p tinyify src/core/turnStyles.js -o dist/turnStyles.js",
