--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
 	"extends": "eslint:recommended",
 	"globals": {
 		"$": "readonly",
+		"chrome": "readonly",
 		"Atomics": "readonly",
 		"SharedArrayBuffer": "readonly"
 	},
