Working restructure for testing.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
 	"globals": {
 		"$": "readonly",
 		"chrome": "readonly",
+		"browser": "readonly",
 		"Atomics": "readonly",
 		"SharedArrayBuffer": "readonly"
 	},
