--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "turnStyles",
-  "version": "5.7.0",
+  "version": "9.9.9",
   "main": "turnStyles.js",
   "repository": "git@github.com:pixelcrisis/turntable-tweaks.git",
   "author": "pixelcrisis <pxcrisis@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "b:1": "browserify -p tinyify turnStyles.js -o build/turnStyles.js",
-    "b:2": "node-sass turnStyles.sass -o build && postcss build/turnStyles.css --use autoprefixer --no-map -d build/",
-    "b:3": "node-sass sass/themes -o build/themes && postcss build/themes/*.css --use autoprefixer --no-map -d build/themes/",
-    "b:4": "node-sass sass/styles -o build/styles && postcss build/styles/*.css --use autoprefixer --no-map -d build/styles/",
-    "b:5": "cp -R static/. build/",
+    "start": "yarn build && yarn watch",
+    "build": "yarn b:core && yarn b:theme && yarn b:style && yarn b:static",
+    "watch": "concurrently \"yarn w:1\" \"yarn w:2\" \"yarn w:3\" \"yarn w:4\"",
+    "b:core": "yarn b:core:1 && yarn b:core:2 && yarn b:core:3",
+    "b:core:1": "browserify -p tinyify turnStyles.js -o build/turnStyles.js",
+    "b:core:2": "node-sass turnStyles.sass -o build",
+    "b:core:3": "postcss build/turnStyles.css --use autoprefixer -d build/",
+    "b:theme": "yarn b:theme:1 && yarn b:theme:2",
+    "b:theme:1": "node-sass sass/themes -o build/themes",
+    "b:theme:2": "postcss build/themes/*.css --use autoprefixer --d build/themes",
+    "b:style": "yarn b:style:1 && yarn b:style:2",
+    "b:style:1": "node-sass sass/styles -o build/styles",
+    "b:style:2": "postcss build/styles/*.css --use autoprefixer --d build/styles",
+    "b:static": "cp -R static/. build/",
     "w:1": "watchify turnStyles.js -o build/turnStyles.js",
     "w:2": "node-sass turnStyles.sass -wo build",
     "w:3": "node-sass sass/themes -wo build/themes",
-    "w:4": "node-sass sass/styles -wo build/styles",
-    "build": "yarn b:1 && yarn b:2 && yarn b:3 && yarn b:4 && yarn b:5",
-    "watch": "concurrently \"yarn w:1\" \"yarn w:2\" \"yarn w:3\" \"yarn w:4\""
+    "w:4": "node-sass sass/styles -wo build/styles"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
