--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turnStyles",
-  "version": "9.9.9",
+  "version": "10.0.0",
   "main": "turnStyles.js",
   "repository": "git@github.com:pixelcrisis/turntable-tweaks.git",
   "author": "pixelcrisis <pxcrisis@gmail.com>",
@@ -31,12 +31,13 @@
     "browserify": "^17.0.0",
     "concurrently": "^6.0.0",
     "eslint": "^7.22.0",
-    "node-sass": "^5.0.0",
     "postcss": "^8.2.9",
     "postcss-cli": "^8.3.1",
     "sass": "^1.32.8",
     "tinyify": "^3.0.0",
     "watchify": "^4.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-sass": "^7.0.1"
+  }
 }
