Upgrade Build Environment
Move node-sass into devDependencies
Rename script folders and add imports
Add copy-and-watch to monitor package changes
Add "scripts" folder to hold bash scripts
Add bash scripts to replace inline npm scripts
Point npm scripts to new bash scripts
Upgrade Building section of README
Remove Building.md in favor of README

--- a/package.json
+++ b/package.json
@@ -6,39 +6,24 @@
   "author": "pixelcrisis <pxcrisis@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "yarn build && yarn watch",
-    "build": "yarn b:core && yarn b:theme && yarn b:style && yarn b:static",
-    "watch": "concurrently \"yarn w:1\" \"yarn w:2\" \"yarn w:3\" \"yarn w:4\"",
-    "quick": "yarn b:core:1 && yarn w:1",
-    "b:core": "yarn b:core:1 && yarn b:core:2 && yarn b:core:3",
-    "b:core:1": "browserify -p tinyify turnStyles.js -o build/turnStyles.js",
-    "b:core:2": "node-sass turnStyles.sass -o build",
-    "b:core:3": "postcss build/turnStyles.css --use autoprefixer -d build/",
-    "b:theme": "yarn b:theme:1 && yarn b:theme:2",
-    "b:theme:1": "node-sass sass/themes -o build/themes",
-    "b:theme:2": "postcss build/themes/*.css --use autoprefixer --d build/themes",
-    "b:style": "yarn b:style:1 && yarn b:style:2",
-    "b:style:1": "node-sass sass/styles -o build/styles",
-    "b:style:2": "postcss build/styles/*.css --use autoprefixer --d build/styles",
-    "b:static": "cp -R static/. build/",
-    "w:1": "watchify turnStyles.js -o build/turnStyles.js",
-    "w:2": "node-sass turnStyles.sass -wo build",
-    "w:3": "node-sass sass/themes -wo build/themes",
-    "w:4": "node-sass sass/styles -wo build/styles"
+    "build": "sh scripts/build.sh",
+    "watch": "sh scripts/watch.sh",
+    "start": "sh scripts/start.sh",
+    "quick": "sh scripts/quick.sh"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "browserify": "^17.0.0",
     "concurrently": "^6.0.0",
+    "copy-and-watch": "^0.1.6",
     "eslint": "^7.22.0",
+    "node-sass": "^7.0.1",
     "postcss": "^8.2.9",
     "postcss-cli": "^8.3.1",
     "sass": "^1.32.8",
     "tinyify": "^3.0.0",
     "watchify": "^4.0.0"
   },
-  "dependencies": {
-    "node-sass": "^7.0.1"
-  }
+  "dependencies": {}
 }
