Add Escort After Next Feature
Add escortMe Function To ondeck.js
Add escorting Warning To ondeck.js
Add escortMe Call To updateDJ
Add escorting Call to CacheSong
Add Toggleable Escort Button To HotBar
HotBar Updates Should Only bindHotBar
Trim QuickText Help Text in tabbed.js
Remove Old console.log From debugs.js
Fix Improper Filter Application In Styles

--- a/config/configs.json
+++ b/config/configs.json
@@ -22,6 +22,7 @@
 
 		"auto_b": true,
 		"nextdj": false,
+		"escort": false,
 		"auto_q": false,
 		"q_text": "Hey @user - it's your turn!",
 
@@ -45,6 +46,7 @@
 			"auto_b": true,
 			"auto_q": true,
 			"nextdj": true,
+			"escort": false,
 			"shared": true,
 			"bubble": false,
 			"people": false,
