--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turnStyles",
-  "version": "11.0.0-beta.5",
+  "version": "11.0.0-rc.1",
   "main": "turnStyles.js",
   "repository": "git@github.com:pixelcrisis/turntable-tweaks.git",
   "author": "pixelcrisis <pxcrisis@gmail.com>",
