[ Break It All To Start Over ]
Remove never used bash/watch.js
Rename bash/start.js to bash/serve.js
Rename config/ to confs/ for only JSON
Rename configs.json to singular config.json
Rename twitch_ids.json to emoteT.json
Rename bttv_ids.json to emoteB.json
Rename all _bind.js to _import.js
Rename chrome/ to static/
Rename inject.js to main.js
Rename browser.js to book.js
Rename nightly.js to beta.js
Rename local.js to self.js
Rename manifest.json manifest2.json
Rename vitals/ to script/
Rename script/* and plugin/* for plainness
Create new static/manifest3.json
Move book.js beta.js self.js into static/
Move storage from config/ to state/

- Now Nothing Works!

--- a/static/manifest3.json
+++ b/static/manifest3.json
@@ -1,8 +1,8 @@
 {
   "name": "turnStyles for turntable.fm",
-  "version": "11.0.2",
+  "version": "12.0.0",
   "description": "Apply tweaks to turntable.fm - autobop, autodj, themes, styles, and more!",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "icons": {
     "48": "images/icon48.png",
     "128": "images/icon128.png"
@@ -31,9 +31,16 @@
     }
   ],
   "web_accessible_resources": [
-    "turnStyles.css",
-    "turnStyles.js",
-    "themes/*",
-    "styles/*"
+    {
+      "resources": [
+        "turnStyles.css",
+        "turnStyles.js",
+        "themes/*",
+        "styles/*"
+      ],
+      "matches": [
+        "*://turntable.fm/*"
+      ]
+    }
   ]
 }
