Start The Build Process Over
Completely Wipe Out turnStyles.js
Completely Wipe Out turnStyles.sass
Update Bash Script Build Processes
Update beta/book/self/main Access Points

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "sh bash/build.sh",
-    "watch": "sh bash/watch.sh",
-    "start": "sh bash/start.sh",
+    "serve": "sh bash/serve.sh",
     "quick": "sh bash/quick.sh",
     "style": "sh bash/style.sh"
   },
