--- a/static/manifest2.json
+++ b/static/manifest2.json
@@ -22,7 +22,7 @@
         "*://turntable.fm/static/*"
       ],
       "js": [
-        "inject.js"
+        "main.js"
       ],
       "run_at": "document_end",
       "matches": [
