Begin Panel Reconstruction
Improve linkMessage In patron.js
Add images/ To manifest web resources
Inititalize New Full Width HotBar

--- a/static/manifest3.json
+++ b/static/manifest3.json
@@ -36,7 +36,8 @@
         "turnStyles.css",
         "turnStyles.js",
         "themes/*",
-        "styles/*"
+        "styles/*",
+        "images/*"
       ],
       "matches": [
         "*://turntable.fm/*"
