Stop Running autoIdle On Every Chat
Stop Running autoIdle On Every Chat
Remove Camel Case In Package Name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turnStyles",
+  "name": "turnstyles",
   "version": "12.0.0-beta.5",
   "main": "turnStyles.js",
   "repository": "git@github.com:pixelcrisis/turntable-tweaks.git",
